# robocasa

./: FORK_NOTES.md  pyproject.toml  setup.py
robocasa/environments/kitchen/: kitchen.py
robocasa/scripts/: dataset_states_to_obs.py
robocasa/utils/robomimic/: robomimic_env_wrapper.py
